js/js.translator/testData/incremental/invalidation/classWithJsExportAndSuspendFunction/lib2/lib.3.kt
class FooImpl : Foo() {
    override suspend fun foo() = 3
}